todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
  namespace: beta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: image-cache
          emptyDir: {}
      containers:
        - name: todo-app
          image: tapanih/dwk-todo-app:0.3
          volumeMounts:
          - name: image-cache
            mountPath: /images
