todo-app/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo-app-ingress
  namespace: beta
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: todo-app-svc
          servicePort: 2346
      - path: /todos
        backend:
          serviceName: todo-service-svc
          servicePort: 2348
